--- a/index.html
+++ b/index.html
@@ -3,18 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&family=Jua&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Document</title>
 </head>
 <body>
     <!-- 🖥️ [1] Hero 섹션 -->
-    <section id="hero" style="background: url('video-or-image.jpg') center/cover no-repeat; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; color: white; text-align: center;">
-    <h1>게릴라 파티 in 서울</h1>
-    <p>한밤의 초대, 당신만 몰랐던 순간</p>
-    <div>
-        <a href="https://your-google-form-link" class="btn">신청하기</a>
-        <a href="https://instagram.com/yourprofile" class="btn btn-secondary">지난 영상 보기</a>
-    </div>
+    <section id="hero">
+        <div class="video-wrapper">
+        <video class="main-video" autoplay loop playsinline>
+            <source src="video/5061405-hd_1920_1080_30fps.mp4">
+        </video>
+        <div class="main-video-overlay">
+            <div class="hero-box">
+                <h1 class="hero-title">게릴라 파티 in 서울</h1>
+                <p class="hero-text">한밤의 초대, 당신만 몰랐던 순간</p>
+                <div class="hero-btn">
+                    <a href="#" class="mainbtn">신청하기</a>
+                    <a href="#" class="mainbtn">지난 영상 보기</a>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
+
+    <section class="event-slide">
+        <section class="event">
+            <div class="event-text">
+                <img src="/img/event.png" class="imgevent">
+            </div>
+        </section>
+
+        <!-- 📦 Swiper Section -->
+        <section class="swiper cardSwiper">
+            <div class="swiper-wrapper" id="swiper-wrapper">
+            <!-- JS에서 카드가 동적으로 삽입됨 -->
+            </div>
+            <div class="swiper-footer-nav">
+                <div class="swiper-button-prev small-arrow"></div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next small-arrow"></div>
+            </div>
+        </section>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", startCountdown);
+    </script>
 
     <!-- 🎥 [2] 소개 섹션 -->
     <section id="intro" style="padding: 80px 20px; text-align: center;">
@@ -23,13 +66,13 @@
     </section>
 
     <!-- 🖼️ [3] 갤러리 or 영상 섹션 -->
-    <section id="gallery" style="padding: 60px 20px;">
-    <h2 style="text-align:center;">지난 파티 영상</h2>
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px;">
-        <a href="https://youtube.com/video1" target="_blank"><img src="thumbnail1.jpg" alt="파티 영상 1" /></a>
-        <a href="https://youtube.com/video2" target="_blank"><img src="thumbnail2.jpg" alt="파티 영상 2" /></a>
+    <div class="reels-wrapper">
+        <div class="reels-track" id="reelsTrack">
+        <!-- 동적으로 비디오 삽입됨 -->
+        </div>
     </div>
-    </section>
+
+    <script src="reels-slide.js"></script>
 
     <!-- 📍 [4] 다음 파티 안내 -->
     <section id="next-event" style="padding: 80px 20px; background-color: #f9f9f9; text-align: center;">
@@ -60,6 +103,7 @@
     <p>도심 속 파티문화의 새로운 해석. <br>고릴라는 자유, 야성, 연결을 상징합니다.</p>
     <p>🎁 굿즈와 NFT, Coming Soon...</p>
     </section>
-
+    <script src="main.js"></script>
 </body>
 </html>
+
