--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="intro.css">
-    <link rel="stylesheet" href="text.css">
-    <link rel="stylesheet" href="section.css">
-    <link rel="stylesheet" href="reels.css">
-    <link rel="stylesheet" href="event.css">
-    <link rel="stylesheet" href="host.css">
-    <link rel="stylesheet" href="notice.css">
-    <link rel="stylesheet" href="stickybar.css">
-    <link rel="stylesheet" href="hero.css">
+    <link rel="stylesheet" href="01hero.css">
+    <link rel="stylesheet" href="02event.css">
+    <link rel="stylesheet" href="03party-cards.css">
+    <link rel="stylesheet" href="04intro.css">
+    <link rel="stylesheet" href="05reels.css">
+    <link rel="stylesheet" href="06host.css">
+    <link rel="stylesheet" href="07notice.css">
+    <link rel="stylesheet" href="10stickybar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
@@ -34,16 +33,16 @@
         <!-- ✅ 처음에 보이는 텍스트/버튼 오버레이 -->
         <div class="main-video-overlay" id="heroOverlay">
             <div class="hero-box">
-                <h1 class="hero-title drop-bounce">게릴라 파티 in 서울</h1>
-                <p class="hero-text drop-bounce drop-delay-1">한밤의 초대, 당신만 몰랐던 순간</p>
-                <div class="hero-btn drop-bounce drop-delay-2">
-                    <a href="#" class="mainbtn" id="playVideoBtn">신청하기</a>
-                    <a href="#" class="mainbtn" id="watchVideoBtn">지난 영상 보기</a>
+                <h1 class="hero-text boingInUp delay-0">홍대에 숨은 도파민 파티가 있다고?</h1>
+                <p class="hero-title boingInUp delay-1">게릴라가 궁금해?</p>
+                <div class="hero-btn boingInUp delay-2">
+                    <a href="#" class="mainbtn" id="watchVideoBtn">궁금하면 클릭 >></a>
                 </div>
+                <button class="party-apply-btn boingInUp delay-2">파티 신청하기</button>
             </div>
         </div>
     </section>
-    <script src="hero.js"></script>
+    <script src="01hero.js"></script>
 
 
     <section class="event-section">
@@ -147,7 +146,7 @@
             </div>
         </div>
     </section>
-    <script src="intro.js"></script>
+    <script src="04intro.js"></script>
 
 
 
@@ -188,7 +187,7 @@
         </div>
     </div>
 
-    <script src="reels-slide.js"></script>
+    <script src="05reels.js"></script>
 
     <!-- 호스트소개 -->
     <div class="host-section">
@@ -267,9 +266,8 @@
             <a href="#map" class="tab-btn">오시는 길</a>
         </div>
         -->
-    <script src="stickybar.js"></script>
-
-    <script src="main.js"></script>
+    <script src="10stickybar.js"></script>
+    <script src="03party-cards.js"></script>
 </body>
 </html>
 
