--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://grl.netlify.app/img/grl.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&display=swap" rel="stylesheet">
@@ -38,7 +39,9 @@
                 <div class="hero-btn boingInUp delay-2">
                     <a href="#" class="mainbtn" id="watchVideoBtn">궁금하면 클릭 >></a>
                 </div>
-                <button class="party-apply-btn boingInUp delay-2">파티 신청하기</button>
+                <button class="party-apply-btn boingInUp delay-2">
+                    <a href="https://tally.so/r/mVdZaa" class="party-apply-btn-only">파티 신청하기</a>
+                </button>
             </div>
         </div>
     </section>
@@ -68,7 +71,7 @@
             </div>
         </div>
         <div class="event-section-box3">
-            <div class="event-section-box3-text">즉, 이벤트 두개 모두 참여 시 총 1.5만원 할인</div>
+            <div class="event-section-box3-text">즉, 이벤트 두개 모두 참여 시 <br><span class="discount">총 1.5만원</span> 할인!!</div>
         </div>
     </section>
 
