--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://grl.netlify.app/img/grl.png"/>
+    <meta property="og:title" content="홍대 게릴라" />
+    <meta property="og:description" content="서울에서 열리는 도파민 파티!" />
+    <meta property="og:image" content="https://grl.netlify.app/img/grl.png" />
+    <meta property="og:url" content="https://grl.netlify.app" />
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&display=swap" rel="stylesheet">
